--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-serialport='4.5.0'
+serialport = '4.5.0'
+serial = { path = "./serial/" }
+tokio = { version = '1.40.0', features = ["full"] }
+clap = { version = '4.5.16', features = ["derive"] }
